final fixed footer alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -56,7 +56,7 @@ div.headerlogo {
   color: MediumAquamarine;
 }
 
-nav {
+header nav {
   padding-right: 40px;
 }
 
